2006-09-12  Vincent Ladeuil  <v.ladeuil@alplog.fr>
        Separate urllib2 wrappers from core webdav.

	* _urllib2_wrappers.py:
	New file. Initialized from webdav.py.

	* webdav.py:
	Move all urllib wrappers to their own file.

2006-09-12-1  Vincent Ladeuil  <v.ladeuil@alplog.fr>
	First version handling automatic redirection.

	* webdav.py:
	(Response): Renamed from HTTPRespone to be coherent with Request.
	(Response.begin): Override httplib.HTTPResponse.begin to purge the
	socket of an optional message nobody cares for.
	(AbstractHTTPConnection): New class to better define HTTPConection
	and HTTPSConnection.
	(AbstractHTTPConnection.fake_close): New method.
	(Request.__init__): New 'parent' and 'redirected_to' attributes to
	handle redirection.
	(AbstractHTTPHandler.do_open): Convert to addinfourl only when
	needed.
	(HTTPRedirectHandler): New class.
	(HTTPErrorProcessor.http_response): Reorder error codes.
	(HttpDavTransport._opener): We can redirect now.
	(HttpDavTransport._head): No message, fake_close the socket.
	(HttpDavTransport._get): fake_close the socket when needed.

2006-09-10  Vincent Ladeuil  <v.ladeuil@alplog.fr>
	Merge jam fixes.

2006-09-10  Vincent Ladeuil  <v.ladeuil@free.fr>
	Cleaning. New simpler Request syntax.

	* webdav.py
	(HTTPSConnection, ConnectionHandler.https_request, HTTPSHandler):
	We don't have to test for hasattr(httplib, 'HTTPS'), urllib2 have
	already done that.
	(Request): Change the signature to make creation of specific
	requests easier.
	(PUTRequest): Moved closer to ReQuest. Add 'Content-Type' header.
	(AbstractHTTPHandler): New class. Cleaner sharing of methods
	between HTTPHanler and HTTPSHandler. Needs to specify
	handler_order to work around a bug in urllib2.build_opener
	bug (which mentions urllib2.HTTPHandler and (conditionally
	urllib2.HTTPSHandler) as default handlers instead of
	urllib2.AbstractHTTPHandler).
	(GETRequest, HEADRequest, MKCOLRequest, COPYRequest, MOVERequest,